<?xml version="1.0"?>
<package format="2">
  <name>krabi_tools</name>
  <version>0.1.0</version>
  <description>Tools to tune/debug the Krabi robot</description>

  <maintainer email="victor.dubois@free.fr">Victor Dubois</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="victor.dubois@free.fr">Victor Dubois</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>krabi_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>krabi_msgs</exec_depend>

</package>
